welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: identifier expected but '(' found.
def (marquerSol){baisseBrosse(); leveBrosse();}
    ^PictureMono:4: error: identifier expected but '(' found.
def (faireV){gauche();avance();marquerSol();droite();
    ^